--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <!--ヘッダーメニュー-->
             <nav>
               <ul class="header-navigation">
+                <span class="fa fa-bars menu-icon"></span>
                 <li class="header-navigation">
                   <a href="#about" style="text-decoration: none;"><span>About</span></a>
                 </li>
