--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             <!--ヘッダーメニュー-->
             <nav>
               <ul class="header-navigation">
-                <span class="fa fa-bars menu-icon"></span>
                 <li class="header-navigation">
                   <a href="#about" style="text-decoration: none;"><span>About</span></a>
                 </li>
@@ -43,7 +42,7 @@
       <div class="about-background">
         <div class="gradient">
           <div class="container">
-              <h2 class="content-title" style="padding-top: 8%;">About</h2>
+              <h2 class="content-title" style="padding-top: 10%;">About</h2>
               <img src="images/self-photo.jpg" alt="プロフィールフォト" height="200px" width="200px">
               <div class="effect">
                 <p class="content">1996生まれ。現在HTML,CSS,PHPを中心に独学中。<br>
@@ -59,7 +58,7 @@
       <div class="works-background">
         <div class="gradient">
           <div class="container">
-              <h2 class="content-title" style="padding-top: 20%;">Works</h2>
+              <h2 class="content-title" style="padding-top: 10%;">Works</h2>
                 <div class="effect">
                   <p class="content">↓ポートフォリオはこちら↓</p>
                 </div>
@@ -72,14 +71,14 @@
       <div class="contact-background">
         <div class="gradient">
           <div class="container">
-            <h2 class="content-title" style="padding-top: 20%;">Contact</h2>
+            <h2 class="content-title" style="padding-top: 10%;">Contact</h2>
             <div class="effect">
-              <p class="content">コンタクトフォームがありますので、そちらからお問合せください。</p>
+              <p class="content">コンタクトフォームがありますので、こちらからお問合せください。</p>
             </div>
-            <a href="http://parastripdiary.net/contact/" class="linkbtn" style="text-decoration: none;">Contact</a>
+            <a href="" class="linkbtn" style="text-decoration: none;">Contact</a>
+            <p class="content">※コンタクトフォームは現在作成中のため、使用できません。</p>
           </div>
-          <div style="margin-top: 130px"></div>
-          <div class="copyright">
+          <div class="copyright" style="margin-bottom: 0%;">
             <p>Copyright. Yusuke Aimi. 2020 All rights reserved.</p>
           </div>
         </div>
