--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="effect">
                   <p class="content">↓ポートフォリオはこちら↓</p>
                 </div>
-                <a class="linkbtn" href="works.html" style="text-decoration: none;">more</a>
+                <a class="linkbtn" href="https://minibbs2020.herokuapp.com/login.php" style="text-decoration: none;">more</a>
           </div>
         </div>
       </div>
