--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </div>
       </div>
     </header>
+    <!--About-->
     <section id="about">
       <div class="about-background">
         <div class="gradient">
@@ -53,7 +54,7 @@
         </div>
       </div>
     </section>
-    
+    <!--Works-->
     <section id="works">
       <div class="works-background">
         <div class="gradient">
@@ -67,6 +68,7 @@
         </div>
       </div>
     </section>
+    <!--Contact-->
     <section id="contact">
       <div class="contact-background">
         <div class="gradient">
@@ -84,7 +86,8 @@
         </div>
       </div>
     </section>
-    <div id="page_top"><a href="#"><i class="fas fa-angle-up"></i></a></div>
+
+    <div id="page_top"><a href="#"><span style="color: #000000"><span style="font-size: 200%"><i class="fa fa-arrow-circle-up"></i></span></span></a></div>
     <!-- jQuery、Popper.js、Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
