--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
               <h2 class="content-title" style="padding-top: 10%;">About</h2>
               <img src="images/self-photo.jpg" alt="プロフィールフォト" height="200px" width="200px">
               <div class="effect">
-                <p class="content">1996生まれ。現在HTML,CSS,PHPを中心に独学中。<br>
-                    趣味は筋トレ、サッカー観戦。<br>
-                    来年中にベンチプレス100kgをあげられるサーバサイドエンジニアになれるよう頑張っています。</p>
+                <p class="content">1996生まれ。<br>
+                  現在HTML,CSS,PHPを中心に独学中。<br>
+                  趣味は筋トレ、サッカー観戦。<br>
+                  来年中にベンチプレス100kgをあげられるサーバサイドエンジニアになれるよう頑張っています。</p>
               </div>
           </div>
         </div>
