--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="about-background">
         <div class="gradient">
           <div class="container">
-              <h2 class="content-title" style="padding-top: 10%;">About</h2>
+              <h2 class="content-title">About</h2>
               <img src="images/self-photo.jpg" alt="プロフィールフォト" height="200px" width="200px">
               <div class="effect">
                 <p class="content">1996生まれ。<br>
@@ -60,7 +60,7 @@
       <div class="works-background">
         <div class="gradient">
           <div class="container">
-              <h2 class="content-title" style="padding-top: 10%;">Works</h2>
+              <h2 class="content-title">Works</h2>
                 <div class="effect">
                   <p class="content">↓ポートフォリオはこちら↓</p>
                 </div>
@@ -74,7 +74,7 @@
       <div class="contact-background">
         <div class="gradient">
           <div class="container">
-            <h2 class="content-title" style="padding-top: 10%;">Contact</h2>
+            <h2 class="content-title">Contact</h2>
             <div class="effect">
               <p class="content">コンタクトフォームがありますので、こちらからお問合せください。</p>
             </div>
