--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
           <div class="container">
               <h2 class="content-title">Works</h2>
                 <div class="effect">
-                  <p class="content">↓ポートフォリオはこちら↓</p>
+                  <p class="content">↓ポートフォリオに関してはこちら↓</p>
                 </div>
-                <a class="linkbtn" href="https://minibbs2020.herokuapp.com/login.php" style="text-decoration: none;">more</a>
+                <a class="linkbtn" href="works/works.html" style="text-decoration: none;">more</a>
           </div>
         </div>
       </div>
@@ -89,10 +89,12 @@
     </section>
 
     <div id="page_top"><a href="#"><span style="color: #000000"><span style="font-size: 200%"><i class="fa fa-arrow-circle-up"></i></span></span></a></div>
-    <!-- jQuery、Popper.js、Bootstrap JS -->
+    <!-- 
+    jQuery、Popper.js、Bootstrap JS
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    -->
     <!--js-->
    <script src="script.js"></script>
   </body>
