--- a/works/works.html
+++ b/works/works.html
@@ -1,1 +1,127 @@
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Yusuke Aimi</title>
+    <!-- css -->
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat">
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  </head>
+  <body>
+    <header>
+      <div class="works-background">
+        <div class="gradient">
+          <!--ハンバーガー3本線-->
+          <div class="humberger-wrap">
+            <div class="humberger-border-1"></div>
+            <div class="humberger-border-2"></div>
+            <div class="humberger-border-3"></div>
+          </div>
+          <!--一般的なヘッダーメニュー-->
+          <nav>
+            <ul class="header-navigation">
+              <li class="header-navigation">
+                <a href="../index.html" style="text-decoration: none;"
+                  ><span>Top</span></a
+                >
+              </li>
+              <li class="header-navigation">
+                <a href="../index.html#about" style="text-decoration: none;"
+                  ><span>About</span></a
+                >
+              </li>
+              <li class="header-navigation">
+                <a href="../index.html#works" style="text-decoration: none;"
+                  ><span>Works</span></a
+                >
+              </li>
+              <li class="header-navigation">
+                <a href="../index.html #contact" style="text-decoration: none;"
+                  ><span>Contact</span></a
+                >
+              </li>
+            </ul>
+          </nav>
+          <div class="container">
+            <h2 class="content-title" style="padding-top: 20%;">Works</h2>
+            <div class="effect">
+              <p class="content">
+                以下に活動内容一覧をのせております。<br />
+                ※下にスクロールしてご覧ください↓
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!--About-->
+    <section id="about">
+      <div class="about-background">
+        <div class="gradient">
+          <div class="container">
+              <h2 class="content-title">About</h2>
+              <img src="images/self-photo.jpg" alt="プロフィールフォト" height="200px" width="200px">
+              <div class="effect">
+                <p class="content">1996生まれ。<br>
+                  現在HTML,CSS,PHPを中心に独学中。<br>
+                  趣味は筋トレ、サッカー観戦。<br>
+                  来年中にベンチプレス100kgをあげられるサーバサイドエンジニアになれるよう頑張っています。</p>
+              </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Works-->
+    <section id="works">
+      <div class="works-background">
+        <div class="gradient">
+          <div class="container">
+              <h2 class="content-title">Works</h2>
+                <div class="effect">
+                  <p class="content">↓ポートフォリオはこちら↓</p>
+                </div>
+                <a class="linkbtn" href="https://minibbs2020.herokuapp.com/login.php" style="text-decoration: none;">more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Contact-->
+    <section id="contact">
+      <div class="contact-background">
+        <div class="gradient">
+          <div class="container">
+            <h2 class="content-title">Contact</h2>
+            <div class="effect">
+              <p class="content">コンタクトフォームがありますので、こちらからお問合せください。</p>
+            </div>
+            <a href="" class="linkbtn" style="text-decoration: none;">Contact</a>
+            <p class="content">※コンタクトフォームは現在作成中のため、使用できません。</p>
+          </div>
+          <div class="copyright" style="margin-bottom: 0%;">
+            <p>Copyright. Yusuke Aimi. 2020 All rights reserved.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <div id="page_top"><a href="#"><span style="color: #000000"><span style="font-size: 200%"><i class="fa fa-arrow-circle-up"></i></span></span></a></div>
+    <!-- 
+    jQuery、Popper.js、Bootstrap JS
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    -->
+    <!--js-->
+   <script src="script.js"></script>
+  </body>
+</html>
