--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
       </div>
     </section>
 
-    <div id="page_top"><a href="#"><span style="color: #000000"><span style="font-size: 200%"><i class="fa fa-arrow-circle-up"></i></span></span></a></div>
+    <div id="page_top">
+      <a href="#"><span style="color: #000000"><span style="font-size: 200%"><i class="fa fa-arrow-circle-up"></i></span></span></a>
+    </div>
     <!-- 
     jQuery、Popper.js、Bootstrap JS
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
