--- a/works/works.html
+++ b/works/works.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header>
-      <div class="works-background">
+      <div class="header-background">
         <div class="gradient">
           <!--ハンバーガー3本線-->
           <div class="humberger-wrap">
@@ -47,14 +47,80 @@
             <h2 class="content-title" style="padding-top: 20%;">Works</h2>
             <div class="effect">
               <p class="content">
-                以下に活動内容一覧をのせております。<br />
-                ※下にスクロールしてご覧ください↓
+                以下に私が作成したポートフォリオの解説をしていきます。
+                作成手順や機能、課題などをまとめました。
               </p>
             </div>
           </div>
         </div>
       </div>
     </header>
+
+    <section id="works">
+      <h2 class="works-content-title">背景</h2>
+      <p class="works-content">
+        大学時代にWordPressでブログを書いていたことがあり、そのころにWeb系に興味を持ち始めました。<br>
+        そこでWordPressなどを自由にカスタマイズできるようになりたいと思い、WordPressで使用されているプログラミング言語のPHPを勉強しようと考えました。<br>
+        そしてPHPの勉強のために簡易掲示板を作成することに決め、これをポートフォリオとすることにしました。
+      </p>
+      <h2 class="works-content-title">目的</h2>
+      <p class="works-content">
+        <li>PHPの基礎知識とMySQLの基礎が修得</li>
+        <li>データベースを利用したプログラムの作成</li>
+        <li>PHPを利用したプログラムを作成し、サーバーサイドのWebサービスを開発できる</li>
+        <li>データベースと連携した、Webサービスを開発・カスタマイズできるにする</li>
+        <li>フルスクラッチでのPHPを利用したWebアプリ制作を行う</li>
+      </p>
+      <h2 class="works-content-title">スペック</h2>
+      <div class="works-content">
+        <h4>使用言語</h4>
+          <li>PHP</li>
+          <li>CSS</li>
+          <li>MySQL</li>
+      </div>
+      <div class="works-content">
+        <h4>開発環境</h4>
+          <li>Windows 10</li>
+          <li>XAMPP</li>
+      </div>
+      <div class="works-content">
+        <h4>バージョン管理</h4>
+          <li>Git</li>
+      </div>
+      <div class="works-content">
+        <h4>本番環境</h4>
+          <li>Heroku</li>
+      </div>
+      <h2 class="works-content-title">主な機能</h2>
+      <p class="works-content">
+        <li>ニックネーム、メールアドレス、パスワードを設定し会員登録</li>
+        <li>アイコン写真のアップロードも可</li>
+        <li>メールアドレスとパスワードでログイン</li>
+        <li>ログアウト</li>
+        <li>文章の投稿</li>
+        <li>投稿への返信機能</li>
+      </p>
+      <h2 class="works-content-title">開発手順</h2>
+      <p class="works-content">
+        <h4>要件定義</h4>
+        <p>まず、今回制作するアプリに必要な機能を簡単にまとめる。</p>
+        <h4>環境設定</h4>
+        <p>XAMPPはPHPの実行に必要なローカルサーバーのApache、データベースのMariaDB、PHPの本体がパッケージになった統合環境構築ツール</p>
+        <h4>データベース設計</h4>
+        <p>まず、今回制作するアプリに必要な機能を簡単にまとめる。</p>
+      </p>
+      <h2 class="works-content-title">機能実装</h2>
+      <p class="works-content">
+        各ページ毎にHTMLで形を作り、PHP内部設計を行った後に、CSSを実装する流れで行いました。
+      </p>
+      <h2 class="works-content-title">課題</h2>
+      <p class="works-content"></p>
+      <h2 class="works-content-title">今後</h2>
+      <p class="works-content"></p>
+      <h2 class="works-content-title">参考文献</h2>
+      <p class="works-content"></p>
+    </section>
+
     <!--Contact-->
     <section id="contact">
       <div class="contact-background">
@@ -73,7 +139,6 @@
         </div>
       </div>
     </section>
-
     <div id="page_top">
       <a href="#"><span style="color: #000000"><span style="font-size: 200%"><i class="fa fa-arrow-circle-up"></i></span></span></a>
     </div>
