--- a/works/works.html
+++ b/works/works.html
@@ -58,19 +58,19 @@
 
     <section id="works">
       <h2 class="works-content-title">背景</h2>
-      <p class="works-content">
+      <div class="works-content">
         大学時代にWordPressでブログを書いていたことがあり、そのころにWeb系に興味を持ち始めました。<br>
         そこでWordPressなどを自由にカスタマイズできるようになりたいと思い、WordPressで使用されているプログラミング言語のPHPを勉強しようと考えました。<br>
         そしてPHPの勉強のために簡易掲示板を作成することに決め、これをポートフォリオとすることにしました。
-      </p>
+      </div>
       <h2 class="works-content-title">目的</h2>
-      <p class="works-content">
+      <div class="works-content">
         <li>PHPの基礎知識とMySQLの基礎が修得</li>
         <li>データベースを利用したプログラムの作成</li>
         <li>PHPを利用したプログラムを作成し、サーバーサイドのWebサービスを開発できる</li>
         <li>データベースと連携した、Webサービスを開発・カスタマイズできるにする</li>
         <li>フルスクラッチでのPHPを利用したWebアプリ制作を行う</li>
-      </p>
+      </div>
       <h2 class="works-content-title">スペック</h2>
       <div class="works-content">
         <h4>使用言語</h4>
@@ -92,33 +92,33 @@
           <li>Heroku</li>
       </div>
       <h2 class="works-content-title">主な機能</h2>
-      <p class="works-content">
+      <div class="works-content">
         <li>ニックネーム、メールアドレス、パスワードを設定し会員登録</li>
         <li>アイコン写真のアップロードも可</li>
         <li>メールアドレスとパスワードでログイン</li>
         <li>ログアウト</li>
         <li>文章の投稿</li>
         <li>投稿への返信機能</li>
-      </p>
+      </div>
       <h2 class="works-content-title">開発手順</h2>
-      <p class="works-content">
+      <div class="works-content">
         <h4>要件定義</h4>
         <p>まず、今回制作するアプリに必要な機能を簡単にまとめる。</p>
         <h4>環境設定</h4>
         <p>XAMPPはPHPの実行に必要なローカルサーバーのApache、データベースのMariaDB、PHPの本体がパッケージになった統合環境構築ツール</p>
         <h4>データベース設計</h4>
         <p>まず、今回制作するアプリに必要な機能を簡単にまとめる。</p>
-      </p>
+      </div>
       <h2 class="works-content-title">機能実装</h2>
-      <p class="works-content">
+      <div class="works-content">
         各ページ毎にHTMLで形を作り、PHP内部設計を行った後に、CSSを実装する流れで行いました。
-      </p>
+      </div>
       <h2 class="works-content-title">課題</h2>
-      <p class="works-content"></p>
+      <div class="works-content"></div>
       <h2 class="works-content-title">今後</h2>
-      <p class="works-content"></p>
+      <div class="works-content"></div>
       <h2 class="works-content-title">参考文献</h2>
-      <p class="works-content"></p>
+      <div class="works-content"></div>
     </section>
 
     <!--Contact-->
