--- a/works/works.html
+++ b/works/works.html
@@ -56,70 +56,133 @@
       </div>
     </header>
 
-    <section id="works">
-      <h2 class="works-content-title">背景</h2>
-      <div class="works-content">
-        大学時代にWordPressでブログを書いていたことがあり、そのころにWeb系に興味を持ち始めました。<br>
-        そこでWordPressなどを自由にカスタマイズできるようになりたいと思い、WordPressで使用されているプログラミング言語のPHPを勉強しようと考えました。<br>
-        そしてPHPの勉強のために簡易掲示板を作成することに決め、これをポートフォリオとすることにしました。
-      </div>
-      <h2 class="works-content-title">目的</h2>
-      <div class="works-content">
-        <li>PHPの基礎知識とMySQLの基礎が修得</li>
-        <li>データベースを利用したプログラムの作成</li>
-        <li>PHPを利用したプログラムを作成し、サーバーサイドのWebサービスを開発できる</li>
-        <li>データベースと連携した、Webサービスを開発・カスタマイズできるにする</li>
-        <li>フルスクラッチでのPHPを利用したWebアプリ制作を行う</li>
-      </div>
-      <h2 class="works-content-title">スペック</h2>
-      <div class="works-content">
-        <h4>使用言語</h4>
-          <li>PHP</li>
-          <li>CSS</li>
-          <li>MySQL</li>
-      </div>
-      <div class="works-content">
-        <h4>開発環境</h4>
-          <li>Windows 10</li>
-          <li>XAMPP</li>
-      </div>
-      <div class="works-content">
-        <h4>バージョン管理</h4>
-          <li>Git</li>
-      </div>
-      <div class="works-content">
-        <h4>本番環境</h4>
-          <li>Heroku</li>
-      </div>
-      <h2 class="works-content-title">主な機能</h2>
-      <div class="works-content">
-        <li>ニックネーム、メールアドレス、パスワードを設定し会員登録</li>
-        <li>アイコン写真のアップロードも可</li>
-        <li>メールアドレスとパスワードでログイン</li>
-        <li>ログアウト</li>
-        <li>文章の投稿</li>
-        <li>投稿への返信機能</li>
-      </div>
-      <h2 class="works-content-title">開発手順</h2>
-      <div class="works-content">
-        <h4>要件定義</h4>
-        <p>まず、今回制作するアプリに必要な機能を簡単にまとめる。</p>
-        <h4>環境設定</h4>
-        <p>XAMPPはPHPの実行に必要なローカルサーバーのApache、データベースのMariaDB、PHPの本体がパッケージになった統合環境構築ツール</p>
-        <h4>データベース設計</h4>
-        <p>まず、今回制作するアプリに必要な機能を簡単にまとめる。</p>
-      </div>
-      <h2 class="works-content-title">機能実装</h2>
-      <div class="works-content">
-        各ページ毎にHTMLで形を作り、PHP内部設計を行った後に、CSSを実装する流れで行いました。
-      </div>
-      <h2 class="works-content-title">課題</h2>
-      <div class="works-content"></div>
-      <h2 class="works-content-title">今後</h2>
-      <div class="works-content"></div>
-      <h2 class="works-content-title">参考文献</h2>
-      <div class="works-content"></div>
-    </section>
+    <div class="main">
+      <section id="works">
+        <h2 id="background">背景</h2>
+        <div class="works-content">
+          大学時代にWordPressでブログを書いていたことがあり、そのころにWeb系に興味を持ち始めました。<br>
+          そこでWordPressなどを自由にカスタマイズできるようになりたいと思い、WordPressで使用されているプログラミング言語のPHPを勉強しようと考えました。<br>
+          そしてPHPの勉強のために簡易掲示板を作成することに決め、これをポートフォリオとすることにしました。
+        </div>
+        <h2 id="goal">目的</h2>
+        <div class="works-content">
+          <li>PHPの基礎知識とMySQLの基礎の修得</li>
+          <li>データベースを利用したプログラムの作成</li>
+          <li>PHPを利用したプログラムを作成し、サーバーサイドのWebサービスを開発できる</li>
+          <li>データベースと連携した、Webサービスを開発・カスタマイズできるにする</li>
+          <li>フルスクラッチでのPHPを利用したWebアプリ制作を行う</li>
+        </div>
+        <h2 id="spec">スペック</h2>
+        <div class="works-content">
+          <h4>使用言語</h4>
+            <li>PHP</li>
+            <li>CSS</li>
+            <li>MySQL</li>
+        </div>
+        <div class="works-content">
+          <h4>開発環境</h4>
+            <li>Windows 10</li>
+            <li>XAMPP</li>
+        </div>
+        <div class="works-content">
+          <h4>バージョン管理</h4>
+            <li>Git</li>
+        </div>
+        <div class="works-content">
+          <h4>本番環境</h4>
+            <li>Heroku</li>
+        </div>
+        <h2 id="function">主な機能</h2>
+        <div class="works-content">
+          <li>ニックネーム、メールアドレス、パスワードを設定し会員登録</li>
+          <li>アイコン写真のアップロードも可</li>
+          <li>メールアドレスとパスワードでログイン</li>
+          <li>ログアウト</li>
+          <li>文章の投稿</li>
+          <li>投稿への返信機能</li>
+        </div>
+        <h2 id="process">開発手順</h2>
+        <div class="works-content">
+          <h4>要件定義</h4>
+          <p>まず、今回制作するアプリに必要な機能を簡単にまとめる。</p>
+          <img src="../images/function.png" class="image">
+        </div>
+        <div class="works-content">
+          <h4>環境選定</h4>
+          <p>PHPの実行に必要なローカルサーバーのApache、データベースのMariaDB、PHPの本体がパッケージになった統合環境構築ツールXAMPPを使うことにした。</p>
+        </div>
+        <div class="works-content">
+          <h4>データベース設計</h4>
+          <p>まず、今回制作するアプリに必要な機能を簡単にまとめる。</p>
+        </div>
+        <h2 id="implement">機能実装</h2>
+        <div class="works-content">
+          <p>各ページ毎にHTMLで形を作り、PHP内部設計を行った後に、CSSを実装する流れで行いました。</p>
+        </div>
+        <div class="works-content">
+          <h4>全体の形をHTMLで記述</h4>
+          <p>全体の形を具体化するためにHTMLで骨格作りをしました。</p>
+        </div>
+        <div class="works-content">
+          <h4>PHPで内部設計</h4>
+          <p>データベース接続確認、SQL文発行、HTML通信</p>
+        </div>
+        <div class="works-content">
+          <h4>CSS設計</h4>
+          <p>・・・</p>
+        </div>
+        <div class="works-content">
+          <h4>Herokuデプロイ</h4>
+          <p>・・・</p>
+        </div>
+        <h2 id="subject">課題</h2>
+        <div class="works-content"></div>
+        <h2 id="last">終わりに</h2>
+        <div class="works-content">
+        <a href="https://github.com/YusukeAimi/portfolio">GitHubはこちら</a>
+        </div>
+        <h2 id="reference">参考文献</h2>
+        <div class="works-content">
+          <li><a href="https://www.amazon.co.jp/%E3%82%88%E3%81%8F%E3%82%8F%E3%81%8B%E3%82%8BPHP%E3%81%AE%E6%95%99%E7%A7%91%E6%9B%B8-%E3%80%90PHP7%E5%AF%BE%E5%BF%9C%E7%89%88%E3%80%91-%E3%81%9F%E3%81%AB%E3%81%90%E3%81%A1%E3%81%BE%E3%81%93%E3%81%A8/dp/4839964688">よくわかるPHPの教科書-【PHP7対応版】-たにぐちまこと</a></li>
+          <li><a href="https://www.udemy.com/course/completeweb2_jp/">フルスタック・Webエンジニア講座</a></li>
+          <li><a href="https://qiita.com/RINYU_DRVO/items/6607a0aa7ca3294f8e47">PHP+MySQLでポートフォリオ作成</a></li>
+          <li><a href="https://qiita.com/ak25562983/items/c6bd1ec88e06a1f7f954">PHPで作ったWebサービスをHerokuでデプロイするまでの手順書</a></li>
+        </div>
+      </section>
+
+      <section id="tables">
+        <ul class="tables-navigation">
+          <h2>目次</h2>
+          <li class="tables-navigation">
+            <a href="#background"><span>背景</span></a>
+          </li>
+          <li class="tables-navigation">
+            <a href="#goal"><span>目的</span></a>
+          </li>
+          <li class="tables-navigation">
+            <a href="#spec"><span>スペック</span></a>
+          </li>
+          <li class="tables-navigation">
+            <a href="#function"><span>主な機能</span></a>
+          </li>
+          <li class="tables-navigation">
+            <a href="#process"><span>開発手順</span></a>
+          </li>
+          <li class="tables-navigation">
+            <a href="#implement"><span>機能実装</span></a>
+          </li>
+          <li class="tables-navigation">
+            <a href="#subject"><span>課題</span></a>
+          </li>
+          <li class="tables-navigation">
+            <a href="#last"><span>終わりに</span></a>
+          </li>
+          <li class="tables-navigation">
+            <a href="#reference"><span>参考文献</span></a>
+          </li>
+        </ul>
+      </section>
+    </div>
 
     <!--Contact-->
     <section id="contact">
