--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <nav>
               <ul class="header-navigation">
                 <li class="header-navigation">
+                  <a href="index.html" style="text-decoration: none;"><span>Top</span></a>
+                </li>
+                <li class="header-navigation">
                   <a href="#about" style="text-decoration: none;"><span>About</span></a>
                 </li>
                 <li class="header-navigation">
