--- a/works/works.html
+++ b/works/works.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="header-background">
-        <div class="gradient">
+        <div class="header-gradient">
           <!--ヘッダーメニュー-->
           <nav>
             <ul class="header-navigation">
