--- a/works/works.html
+++ b/works/works.html
@@ -137,7 +137,7 @@
         </div>
         <h2 id="reference">参考文献</h2>
         <div class="works-content">
-          <li><a href="https://www.amazon.co.jp/%E3%82%88%E3%81%8F%E3%82%8F%E3%81%8B%E3%82%8BPHP%E3%81%AE%E6%95%99%E7%A7%91%E6%9B%B8-%E3%80%90PHP7%E5%AF%BE%E5%BF%9C%E7%89%88%E3%80%91-%E3%81%9F%E3%81%AB%E3%81%90%E3%81%A1%E3%81%BE%E3%81%93%E3%81%A8/dp/4839964688">よくわかるPHPの教科書-【PHP7対応版】-たにぐちまこと</a></li>
+          <li><a href="https://www.amazon.co.jp/%E3%82%88%E3%81%8F%E3%82%8F%E3%81%8B%E3%82%8BPHP%E3%81%AE%E6%95%99%E7%A7%91%E6%9B%B8-%E3%80%90PHP7%E5%AF%BE%E5%BF%9C%E7%89%88%E3%80%91-%E3%81%9F%E3%81%AB%E3%81%90%E3%81%A1%E3%81%BE%E3%81%93%E3%81%A8/dp/4839964688">よくわかるPHPの教科書-【PHP7対応版】</a></li>
           <li><a href="https://www.udemy.com/course/completeweb2_jp/">フルスタック・Webエンジニア講座</a></li>
           <li><a href="https://qiita.com/RINYU_DRVO/items/6607a0aa7ca3294f8e47">PHP+MySQLでポートフォリオ作成</a></li>
           <li><a href="https://qiita.com/ak25562983/items/c6bd1ec88e06a1f7f954">PHPで作ったWebサービスをHerokuでデプロイするまでの手順書</a></li>
